r1:
	* Primera release del juego.
	
r2:
	* Ya no es necesario el módulo termcolor, se usa directamente las sentencias de escape ANSI correspondientes.

r3 (stable):
	* Ahora se usará Curses para mostrar una interfaz de juego más clara.
	
r4 (stable):
	* Solucionado un fallo a la hora de comprobar qué tecla se pulsó.
	* Convierte las mayúsculas en minúscula.

r5:
	* Terminado de solucionar el fallo a la hora de comprobar qué tecla se pulsó.
	* Otros cambios menores.

r6:
	* Solucionado un fallo en el instalador.

r7:
	* Solucionado un fallo al re dimensionar la terminal cuando pregunta si se desea volver a jugar.
	* Si una tecla ya se pulsó, si se vuelve a pulsar no lo contará como errónea.

r8:
	* Ahora al preguntar si se quiere volver a jugar se puede pulsar también la tecla S.

r9:
	* Se ha modificado la interfaz para aprovechar algo más el ancho de la terminal.
	* Ahora al terminar una partida, se puede pulsar cualquier tecla para empezar una nueva partida o pulsar la tecla Esc para salir del juego.
	* Ahora al fallar te muestra la palabra que era.

r10 (0.9.0):
	* Lanzamiento de la primera release candidate del juego

r11 (0.9.1):
	* Se han cambiado los _ por * para ver mejor cuantas letras contiene.
	* Ahora se puede usar usar un otro fichero con palabras pasándole como parámetro la ruta a ese archivo de texto
	* Se han borrado algunas palabras y añadidas otras en la lista de palabras