@@ -1,20 +1,13 @@
-ahorcado
 terminal
 nucleo
-navegador
 sistema
 procesador
 tarjeta
-madrid
-internet
 linux
 ubuntu
 debian
 kernel
-facebook
-twitter
 android
-google
 kde
 gnome
 fedora
@@ -34,9 +27,21 @@ lxde
 cinnamon
 linuxmint
 pardus
-wikipedia
 archlinux
 gimp
 icewm
-google
-yahoo
+python
+gstreamer
+terminal
+grub
+parted
+xmms
+apache
+mysql
+alsa
+pulse
+windomaker
+elementary
+leafpad
+nano
+emacs
