@@ -1,0 +1,21 @@
+retromadrid
+spectrum
+commodore
+amiga
+amstrad
+nintendo
+sega
+neogeo
+dinamic
+azpari
+taito
+hudson
+sinclair
+msx
+basic
+acorn
+ocean
+famicom
+megadrive
+atari
+gameboy
