@@ -1,0 +1,25 @@
+ahorcado
+nucleo
+internet
+facebook
+twitter
+android
+google
+firefox
+google
+yahoo
+python
+chrome
+ladron
+españa
+brasil
+robot
+dragon
+reloj
+cassette
+ruleta
+futbol
+baloncesto
+tenis
+carreras
+atletismo
